// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo baseline lg 1`] = `
<div>
  <a
    class="makeStyles-link-9"
    href="/"
  >
    <div
      class="makeStyles-logo-11"
    >
      <img
        alt="baseline-lg c3pm logo"
        height="auto"
        src="/assets/c3pm.png"
        width="300"
      />
      <p
        class="MuiTypography-root makeStyles-baseline-10 makeStyles-baseline-12 MuiTypography-body1"
      >
        C++ Package Manager
      </p>
    </div>
  </a>
</div>
`;

exports[`Logo baseline md 1`] = `
<div>
  <a
    class="makeStyles-link-5"
    href="/"
  >
    <div
      class="makeStyles-logo-7"
    >
      <img
        alt="baseline-md c3pm logo"
        height="auto"
        src="/assets/c3pm.png"
        width="200"
      />
      <p
        class="MuiTypography-root makeStyles-baseline-6 makeStyles-baseline-8 MuiTypography-body1"
      >
        C++ Package Manager
      </p>
    </div>
  </a>
</div>
`;

exports[`Logo baseline sm 1`] = `
<div>
  <a
    class="makeStyles-link-13"
    href="/"
  >
    <div
      class="makeStyles-logo-15"
    >
      <img
        alt="baseline-sm c3pm logo"
        height="auto"
        src="/assets/c3pm.png"
        width="100"
      />
      <p
        class="MuiTypography-root makeStyles-baseline-14 makeStyles-baseline-16 MuiTypography-body1"
      >
        C++ Package Manager
      </p>
    </div>
  </a>
</div>
`;

exports[`Logo baseline xl 1`] = `
<div>
  <a
    class="makeStyles-link-1"
    href="/"
  >
    <div
      class="makeStyles-logo-3"
    >
      <img
        alt="baseline-xl c3pm logo"
        height="auto"
        src="/assets/c3pm.png"
        width="600"
      />
      <p
        class="MuiTypography-root makeStyles-baseline-2 makeStyles-baseline-4 MuiTypography-body1"
      >
        C++ Package Manager
      </p>
    </div>
  </a>
</div>
`;

exports[`Logo mini lg 1`] = `
<div>
  <a
    class="makeStyles-link-29"
    href="/"
  >
    <div
      class="makeStyles-logo-31"
    >
      <img
        alt="mini-lg c3pm logo"
        height="100"
        src="/assets/c3pm_3.png"
        width="auto"
      />
    </div>
  </a>
</div>
`;

exports[`Logo mini md 1`] = `
<div>
  <a
    class="makeStyles-link-25"
    href="/"
  >
    <div
      class="makeStyles-logo-27"
    >
      <img
        alt="mini-md c3pm logo"
        height="80"
        src="/assets/c3pm_3.png"
        width="auto"
      />
    </div>
  </a>
</div>
`;

exports[`Logo mini no size 1`] = `
<div>
  <a
    class="makeStyles-link-37"
    href="/"
  >
    <div
      class="makeStyles-logo-39"
    >
      <img
        alt="mini-null c3pm logo"
        height="auto"
        src="/assets/c3pm_3.png"
        width="auto"
      />
    </div>
  </a>
</div>
`;

exports[`Logo mini sm 1`] = `
<div>
  <a
    class="makeStyles-link-33"
    href="/"
  >
    <div
      class="makeStyles-logo-35"
    >
      <img
        alt="mini-sm c3pm logo"
        height="40"
        src="/assets/c3pm_3.png"
        width="auto"
      />
    </div>
  </a>
</div>
`;

exports[`Logo mini xl 1`] = `
<div>
  <a
    class="makeStyles-link-21"
    href="/"
  >
    <div
      class="makeStyles-logo-23"
    >
      <img
        alt="mini-xl c3pm logo"
        height="200"
        src="/assets/c3pm_3.png"
        width="auto"
      />
    </div>
  </a>
</div>
`;

exports[`Logo no size no type 1`] = `
<div>
  <a
    class="makeStyles-link-17"
    href="/"
  >
    <div
      class="makeStyles-logo-19"
    >
      <img
        alt="classic-null c3pm logo"
        height="auto"
        src="/assets/c3pm.png"
        width="100%"
      />
    </div>
  </a>
</div>
`;
